<resources>
    <string name="app_name">calculator</string>
    <string name="ShowTest">ShowText</string>
    <string name="zero_num">0</string>
    <string name="one_num">1</string>
    <string name="two_num">2</string>
    <string name="three_num">3</string>
    <string name="four_num">4</string>
    <string name="five_num">5</string>
    <string name="six_num">6</string>
    <string name="seven_num">7</string>
    <string name="eight_num">8</string>
    <string name="nine_num">9</string>
    <string name="plus_mark">+</string>
    <string name="minus_mark">-</string>
    <string name="equal_mark">=</string>
    <string name="clear_mark">C</string>
    <string name="multiple_mark">*</string>
    <string name="divide_mark">/</string>
    <string name="dot_mark">.</string>
    <string name="percent_mark">%</string>
    <string name="plusminus_mark">±</string>
</resources>